# Cyber-Cat

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
docs/: AI 共存者项目设计文档.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/behavior/: mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/state/: emotion.rs  mod.rs  physiological.rs  relationship.rs
src/components/: Sophie.vue  ThoughtBubble.vue
src/styles/: main.css
