[package]
name = "cyber-cat"
version = "0.1.0"
description = "Cyber-Cat: Sophie - a digital cat companion"
authors = ["you"]
license = "MIT"
repository = "https://github.com/sawyerbutton/Cyber-Cat"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dotenvy = "0.15"
dirs = "6"
